# finn

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.md  Dockerfile  HDL_STYLE_GUIDE.md  LICENSE  LICENSE.txt  PYTHON_STYLE_GUIDE.md  README.md  README.rst  STYLE_GUIDE.md  build_pipenv.sh  env.sh  fetch-repos.sh  generate_dataset.py  mypy.ini  python_repos.txt  requirements.txt  run-docker-eda.sh  run-docker.sh  run-docker_jpk.sh  run-podman.sh  setup-local.sh  setup.cfg  setup.py  test.sh  test_brevitas_debug.onnx  test_nb.ipynb  test_pow_simple.py  train_net.py  train_net.sh  xrt_supported_versions.txt
.Xilinx/: HLS_init.tcl
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docker-image.yml  pre-commit.yml  quicktest-dev-pr.yml  singularity-quicktest.yml
FINN/backend/: README.md
FINN/core/: config.py  coverification.py  datasets.py  device.py  im2col.py  layers.py  nn.py  nnimporter.py  nswg.py  perf_candidate.py  perf_model.py  quantize.py  template.py  util.py
FINN/data/: README.md
FINN/devices/: XLNX:KU115.json  XLNX:PYNQ-Z1.json  XLNX:TEST1.json  XLNX:VU9P.json
FINN/frontend/: caffeloader.py  excelloader.py  frontend_hwgq.py  frontend_prototxt.py  jsonloader.py  loader.py
FINN/inputs/: Dorefanet.xlsx  Dorefanet_Pruning.xlsx  HWGQ.xlsx  caffenet-hwgq-w1a2.prototxt  cnv-w1a1.caffemodel  cnv-w1a1.prototxt  cnv_iter_500000.caffemodel  dorefanet-pruned-without-extra-messages.prototxt  dorefanet-pruned.prototxt  lenet-hwgq-w1a2.caffemodel  lenet-hwgq-w1a2.prototxt  lfc-w1a1.caffemodel  lfc-w1a1.prototxt  lfc.prototxt  sfc-w1a1.caffemodel  sfc-w1a1.prototxt  sfc-w1a2.caffemodel  sfc-w1a2.prototxt  sfc.prototxt
FINN/spec/: FINN-IR-draft.md  finn-erdnn.proto  finn-erdns.proto  repos.md
FINN/test/: test.py  test_bram_model.py  test_core.py  test_dorefa.py  test_hw_model.py  test_hwgq_caffenet.py  test_hwgq_cnv_w1a1.py  test_hwgq_lenet5.py  test_hwgq_lfc_w1a1.py  test_hwgq_sfc_w1a1.py  test_hwgq_sfc_w1a2.py  test_lfc.py  test_lfc_perf_model.py  test_nn.py  test_sfc.py  test_tincyyolo.py
FINN/transforms/: transformations.py
benchmarking/: bench-ci.yml  bench.py  bench_base.py  bench_rtl_swg.py  collect.py  templates.py  util.py
benchmarking/cfg/: fifosizing_test.json  metafi_fifosizing_test.json  mvau_test.json  resnet50_fifosizing_test.json  transformer_gpt_all.json  transformer_radioml_all.json  transformer_sweep.json  transformer_test.json
benchmarking/dut/: fifosizing.py  mvau.py  resnet50_custom_steps.py  transformer.py  transformer_custom_steps.py  transformer_gpt.py  transformer_radioml.py
benchmarking/harness/: vector_xor.v
custom_hls/: accl_funcs.hpp  addstreams_float.hpp  checksum.hpp  checksum_tb.sv  checksum_tlast.cpp  checksum_tlast.hpp  flatten.hpp  lookup.hpp  reducemax.hpp  sm_utils.hpp  softmax.hpp
custom_hls/accl/: CMakeLists.txt  funcs.hpp  sim.hpp
doc/: readme.md
docker/: Dockerfile.ci  Dockerfile.finn  Dockerfile.finn_ci  Dockerfile.finn_dev  Jenkinsfile  create_and_switch_user.sh  finn_entrypoint.sh  launch-jenkins.sh  quicktest.sh
docker/jenkins/: Dockerfile.jenkins  Jenkinsfile  Jenkinsfile_Brevitas  Jenkinsfile_CI  Jenkinsfile_HW  hack_driver_script.py  test_bnn_hw_pytest.py
docs/: README.md  _config.yml  about.md  archive.md  blog.md  community.md  conf.py  demos.md  events.md  example-networks.md  finn-sheduling-and-folding.pptx  index.md  index.rst  publications.md  quickstart.md  requirements.txt
docs/_layouts/: default.html
docs/_posts/: 2019-09-27-new-project-page-is-live.md  2019-10-02-rebuilding-finn-for-open-source.md  2020-02-28-finn-v02b-beta-is-released.md  (+16 more)
finn-hlslib/: CONTRIBUTING.md  Jenkinsfile  LICENSE  README.md  activations.hpp  bnn-library.h  convlayer.h  dma.h  fclayer.h  interpret.hpp  mac.hpp  maxpool.h  mmv.hpp  mvau.hpp  requirements.txt  slidingwindow.h  streamtools.h  utils.hpp  weights.hpp
finn_xsi/: Makefile  rtlsim_config.hpp.template  rtlsim_xsi.cpp  sim_engine.py  xsi_bind.cpp  xsi_finn.cpp  xsi_finn.hpp
notebooks/: 4-FINN-HowToAnalysisPass.ipynb  6-FINN-CodeGenerationAndCompilation.ipynb  8-FINN-VerificationHLSCustomOp.ipynb  9-FINN-EndToEndFlow.ipynb  FCLayer_graph.onnx  FINN-CodeGenerationAndCompilation.ipynb  FINN-CustomOps.ipynb  FINN-HowToAnalysisPass.ipynb  FINN-HowToTransformationPass.ipynb  FINN-HowToWorkWithONNX.ipynb  FINN-ModelWrapper.ipynb  FINN-ModelWrapperAndHowToAnalysisPass.ipynb  FINN-VerificationHLSCustomOp.ipynb  Untitled.ipynb  brevitas-network-import.ipynb  finn-basics.ipynb
scripts/: finn-env.sh  install-system-deps.sh  quicktest-local.sh
ssh_keys/: config.bak
tests/: TESTexecute_StreamingFCLayer_Batch.cpp  conftest.py  finn-hls-onnx-model.onnx  input_0.npy  layer_streaming_maxpool  layer_streaming_maxpool.cpp  layer_test.sh  max-pool-model.onnx  output.npy  test_basic_onnx_exec.py  test_batchnorm_to_affine.py  test_brevitas_cnv.py  test_brevitas_export.py  test_code_generation.py  test_collapse_repeated_op.py  test_custom_onnx_exec.py  test_datatypes.py  test_enforce_import_order.py  test_factor_out_mul_sign_magnitude.py  test_finn_hls_onnx_graph.py  test_fold_constants.py  test_gen_FINN_dt_tensor.py  test_gen_finn_dt_tensor.py  test_general_transformation.py  test_im2col.py  test_infer_datatypes.py  test_infer_shapes.py  test_is_linear.py  test_layer_streaming_fclayer_batch.py  test_layer_streaming_maxpool.py  test_mixed_onnx_exec.py  test_modelwrapper.py  test_move_add_past_mul.py  test_move_scalar_mul_past_matmul.py  test_move_scalar_past_matmul.py  test_multi_thresholding.py  test_npy2hls.py  test_padding.py  test_renaming.py  test_round_thresholds.py  (+10 more)
tinydeit/: bert_demo.py  bert_demo.yaml  custom_steps.py  evaluate_onnx_accuracy.py  quantize_tinydeit_improved.py  quantize_to_int8.py  train_fp32_model.py  train_tinydeit_cifar10.py
ultranet/: Makefile  README.md  build.py  convert_pretrained_weights.py  export_qonnx.py  specialise_layers.json  ultranet_brevitas_simple.py
(+1700 files in other folders)
